--- a/display/templates/display/index.html
+++ b/display/templates/display/index.html
@@ -8,7 +8,11 @@
 <body>
     {% for item in item_list%}
     <ul>
-        <li> {{item.id}} -- {{item.item_name}}</li>
+        <li> 
+        <!-- <a href="/display/{{item.id}}/">{{item.id}} -- {{item.item_name}}</a> --><!--Hardcoded URL /display/{{item.id}}-->
+         <!-- {{item.id}} -- {{item.item_name}} -->
+          <a href="{% url 'detail' item.id %}">{{item.id}} -- {{item.item_name}}</a>
+        </li>
     </ul>
        
     {% endfor %}
