--- a/display/templates/display/index.html
+++ b/display/templates/display/index.html
@@ -9,6 +9,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a href="#" class="navbar-brand">FoodApp</a>
+
+        <div class="navbar-nav ms-auto">
+            <a href="#" class="nav-item nav-link">Add Item</a>
+            <a href="#" class="nav-item nav-link">Delete Item</a>
+            <a href="#" class="nav-item nav-link">View Item</a>
+        </div>
+
+    </nav>
+    <!-- .navbar-nav defaults to flex-direction: column -->
+    <!-- navbar-expand-lg → horizontal layout on large screens
+    ms-auto → pushes links to the right -->
+
+
+
     {% for item in item_list%}
     <ul>
         <li> 
