Base Template added

--- a/display/templates/display/detail.html
+++ b/display/templates/display/detail.html
@@ -1,3 +1,4 @@
+{% extends 'display/base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,10 +7,11 @@
     <title>Details</title>
 </head>
 <body>
-    
+    {% block body %}
         <h1>{{item.item_name}}</h1>
         <h2>{{item.item_desc}}</h2>
         <h3>{{item.item_price}}</h3>
+    {% endblock %}
     
 </body>
 </html>
