--- a/display/templates/display/index.html
+++ b/display/templates/display/index.html
@@ -10,7 +10,24 @@
 </head>
 <body>
     {% block body %}
-        {% for item in item_list%}
+        {% for item in item_list %}
+            <div class="row">
+                <div class = "col-md-3 offset-md-2">
+                    <img class="img-fluid" height = 100px src = "{{ item.item_image }}"/>
+                </div>
+                <div class="col-md-4">
+                    <h3>{{ item.item_name }}</h3>
+                    <h5>{{ item.item_desc }}</h5>
+                    <h6>${{ item.item_price }}</h6>
+                </div>
+                <div class="col-md-2">
+                    <a href="{% url 'display:detail' item.id %}" class="btn btn-success">Details</a>
+                </div>
+            </div>
+        {% endfor %}
+    {% endblock %}
+
+       <!-- OLD CODE -->
         <ul>
             <li> 
             <!-- <a href="/display/{{item.id}}/">{{item.id}} -- {{item.item_name}}</a> --><!--Hardcoded URL /display/{{item.id}}-->
@@ -18,11 +35,6 @@
             <a href="{% url 'display:detail' item.id %}">{{item.id}} -- {{item.item_name}}</a><!--Detail is the name of the path in urls.py-->
             </li>
         </ul>
-        
-        {% endfor %}
-    {% endblock %}
-
-
     
 
 
