--- a/display/templates/display/base.html
+++ b/display/templates/display/base.html
@@ -14,7 +14,7 @@
         <a href="#" class="navbar-brand">FoodApp</a>
 
         <div class="navbar-nav ms-auto">
-            <a href="#" class="nav-item nav-link">Add Item</a>
+            <a href="{% url 'display:create_item' %}" class="nav-item nav-link">Add Item</a>
             <a href="#" class="nav-item nav-link">Delete Item</a>
             <a href="#" class="nav-item nav-link">View Item</a>
         </div>
