--- a/display/templates/display/base.html
+++ b/display/templates/display/base.html
@@ -26,7 +26,9 @@
 
     {% if messages %}
         {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
             {{ message }}
+        </div>
         {% endfor %}
     {% endif %}
     
